# open-interceptor

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  config.yaml.example  install.sh
.github/workflows/: ci.yml  release.yml
docs/: claude-code-headers.md
homebrew/Formula/: open-interceptor.rb
src/: cli.rs  config.rs  daemon.rs  lib.rs  main.rs  proxy.rs  router.rs
src/daemon/: launchd.rs  mod.rs  systemd.rs  unsupported.rs
src/domain/: config.rs  mod.rs  router.rs
src/providers/: anthropic.rs  mod.rs  openai.rs
src/services/: config.rs  context_guard.rs  health.rs  key_pool.rs  mod.rs  models.rs
src/translate/: mod.rs  req_anthropic_to_openai.rs  resp_openai_to_anthropic.rs  sse_stream.rs  types_anthropic.rs  types_openai.rs
src/translate/snapshots/: open_interceptor__translate__req_anthropic_to_openai__tests__snapshot_complex_conversation_with_tools.snap  open_interceptor__translate__req_anthropic_to_openai__tests__snapshot_consecutive_tool_calls.snap  open_interceptor__translate__req_anthropic_to_openai__tests__snapshot_minimal_text_only.snap  open_interceptor__translate__resp_openai_to_anthropic__tests__snapshot_multiple_tool_calls.snap  open_interceptor__translate__resp_openai_to_anthropic__tests__snapshot_text_response.snap  open_interceptor__translate__resp_openai_to_anthropic__tests__snapshot_tool_call_response.snap  open_interceptor__translate__sse_stream__tests__snapshot_full_stream_text_only.snap  open_interceptor__translate__sse_stream__tests__snapshot_full_stream_text_then_tool_call.snap
tests/domain/: config_tests.rs  router_tests.rs
tests/providers/: anthropic_tests.rs  openai_tests.rs
tests/services/: config_service_tests.rs  models_endpoint_tests.rs
tools/: bundle-app.sh  capture_headers.py  deploy.sh  make-icons.sh  mock_openai.py
